[build-system]
requires = ["maturin>=1.3.0,<2.0"]
build-backend = "maturin"

[project]
name = "oxipostflop"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]  # whats that?

[tool.maturin]
python-source = "python"
include = ["*"]  # what are we including?

[tool.pyright]
venvPath = "."      # The directory where your venv folder is located
venv = "venv13"      # The name of the virtual environment folder
